After going through the book

--- a/6.1-one-hot-encoding-of-words-or-characters.ipynb
+++ b/6.1-one-hot-encoding-of-words-or-characters.ipynb
@@ -6,16 +6,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'2.0.8'"
+       "'2.4.3'"
       ]
      },
      "execution_count": 1,
@@ -57,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +86,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +150,32 @@
     "    for j, character in enumerate(sample[:max_length]):\n",
     "        index = token_index.get(character)\n",
     "        results[i, j, index] = 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~ \\t\\n\\r\\x0b\\x0c',\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "characters, results[0][0]"
    ]
   },
   {
@@ -235,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
