--- a/2.1-a-first-look-at-a-neural-network.ipynb
+++ b/2.1-a-first-look-at-a-neural-network.ipynb
@@ -6,16 +6,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'2.0.8'"
+       "'2.4.3'"
       ]
      },
      "execution_count": 1,
@@ -62,14 +55,32 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.datasets import mnist\n",
     "\n",
     "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(train_images)"
    ]
   },
   {
@@ -141,6 +152,26 @@
    ],
    "source": [
     "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_labels)"
    ]
   },
   {
@@ -223,10 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras import models\n",
@@ -265,10 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "network.compile(optimizer='rmsprop',\n",
@@ -288,10 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_images = train_images.reshape((60000, 28 * 28))\n",
@@ -310,10 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.utils import to_categorical\n",
@@ -332,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -340,24 +363,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 2s - loss: 0.2577 - acc: 0.9245     \n",
+      "469/469 [==============================] - 3s 6ms/step - loss: 0.4233 - accuracy: 0.8776\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1042 - acc: 0.9690     \n",
+      "469/469 [==============================] - 3s 6ms/step - loss: 0.1150 - accuracy: 0.9674\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0687 - acc: 0.9793     \n",
+      "469/469 [==============================] - 3s 6ms/step - loss: 0.0720 - accuracy: 0.9796\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0508 - acc: 0.9848     \n",
+      "469/469 [==============================] - 3s 6ms/step - loss: 0.0487 - accuracy: 0.9854\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0382 - acc: 0.9890     \n"
+      "469/469 [==============================] - 3s 6ms/step - loss: 0.0361 - accuracy: 0.9891\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fce5fed5fd0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fceea00e100>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9536/10000 [===========================>..] - ETA: 0s"
+      "313/313 [==============================] - 1s 2ms/step - loss: 0.0694 - accuracy: 0.9792\n"
      ]
     }
    ],
@@ -395,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_acc: 0.9777\n"
+      "test_acc: 0.979200005531311\n"
      ]
     }
    ],
@@ -443,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
