--- a/5.1-introduction-to-convnets.ipynb
+++ b/5.1-introduction-to-convnets.ipynb
@@ -6,16 +6,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'2.0.8'"
+       "'2.4.3'"
       ]
      },
      "execution_count": 1,
@@ -53,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +54,11 @@
     "from keras import models\n",
     "\n",
     "model = models.Sequential()\n",
-    "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1), padding=\"same\"))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
-    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu', padding=\"same\"))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
-    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))"
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu', padding=\"same\"))"
    ]
   },
   {
@@ -77,25 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 26, 26, 32)        320       \n",
+      "conv2d_4 (Conv2D)            (None, 28, 28, 32)        320       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 13, 13, 32)        0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 11, 11, 64)        18496     \n",
+      "conv2d_5 (Conv2D)            (None, 14, 14, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 3, 3, 64)          36928     \n",
+      "conv2d_6 (Conv2D)            (None, 7, 7, 64)          36928     \n",
       "=================================================================\n",
       "Total params: 55,744\n",
       "Trainable params: 55,744\n",
@@ -125,10 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.add(layers.Flatten())\n",
@@ -146,34 +138,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 26, 26, 32)        320       \n",
+      "conv2d_4 (Conv2D)            (None, 28, 28, 32)        320       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 13, 13, 32)        0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 14, 14, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 11, 11, 64)        18496     \n",
+      "conv2d_5 (Conv2D)            (None, 14, 14, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 3, 3, 64)          36928     \n",
+      "conv2d_6 (Conv2D)            (None, 7, 7, 64)          36928     \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 576)               0         \n",
+      "flatten_1 (Flatten)          (None, 3136)              0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 64)                36928     \n",
+      "dense_2 (Dense)              (None, 64)                200768    \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                650       \n",
+      "dense_3 (Dense)              (None, 10)                650       \n",
       "=================================================================\n",
-      "Total params: 93,322\n",
-      "Trainable params: 93,322\n",
+      "Total params: 257,162\n",
+      "Trainable params: 257,162\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,32 +209,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 8s - loss: 0.1766 - acc: 0.9440     \n",
+      "938/938 [==============================] - 20s 13ms/step - loss: 0.3256 - accuracy: 0.8961\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0462 - acc: 0.9855     \n",
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.0447 - accuracy: 0.9861\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0322 - acc: 0.9902     \n",
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.0264 - accuracy: 0.9916\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0241 - acc: 0.9926     \n",
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.0195 - accuracy: 0.9938\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0187 - acc: 0.9943     \n"
+      "938/938 [==============================] - 5s 5ms/step - loss: 0.0156 - accuracy: 0.9947\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fbd9c4cd828>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f3898c875e0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9536/10000 [===========================>..] - ETA: 0s"
+      "313/313 [==============================] - 4s 13ms/step - loss: 0.0328 - accuracy: 0.9919\n"
      ]
     }
    ],
@@ -279,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.99129999999999996"
+       "0.9919000267982483"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,6 +299,13 @@
     "While our densely-connected network from Chapter 2 had a test accuracy of 97.8%, our basic convnet has a test accuracy of 99.3%: we \n",
     "decreased our error rate by 68% (relative). Not bad! "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -322,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
